# Spectral_Match

./: .gitignore  README.md  main.py
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  endpoints.py  router.py
backend/app/core/: config.py  errors.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: cache_service.py  container.py  export_service.py  image_service.py  library_service.py  match_service.py  state_store.py
backend/app/utils/: __init__.py  signature.py  spectral_math.py
backend/scripts/: compile_usgs_master.py  compile_usgs_splib07a_ascii.py  compile_usgs_splib07b_ascii.py  prebuild_satellite_signatures.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  queries.ts
frontend/src/components/ExportPanel/: ExportPanel.css  index.tsx
frontend/src/components/ImageLoader/: ImageLoader.css  index.tsx
frontend/src/components/ImageViewer/: ImageViewer.css  index.tsx
frontend/src/components/Layout/: Layout.css  Sidebar.tsx  StatusBar.tsx  index.tsx
frontend/src/components/MatchTable/: MatchTable.css  index.tsx
frontend/src/components/SpectralChart/: SpectralChart.css  index.tsx
frontend/src/constants/: spectralStyle.ts
frontend/src/store/: useAppStore.ts
