[project]
name = "spectral-match-backend"
version = "0.1.0"
description = "Local FastAPI backend for hyperspectral spectral matching."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.33.0",
  "pydantic>=2.10.0",
  "orjson>=3.10.0",
  "numpy>=2.0.0",
  "numba>=0.61.0",
  "h5py>=3.12.0",
  "spectral>=0.23.1",
  "rasterio>=1.4.0",
  "faiss-cpu>=1.9.0",
  "Pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
